# goodparse

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
samples/: Test4.goodnotes  test.goodnotes  test2.goodnotes  test3.goodnotes
samples/Test4/: index.attachments.pb  index.events.pb  index.notes.pb
samples/Test4/attachments/: B9F5E2EA-F4AD-4782-A86A-2CE4ED65B4FD  E6060F38-9B94-40A6-A9AD-C913CB297094
samples/Test4/notes/: F51610D9-2DEC-4842-BD27-12371BC96206
samples/test1/test/: index.attachments.pb  index.events.pb  index.notes.pb
samples/test1/test/attachments/: 70AB4692-4DEB-4EA0-BB52-72C029D24D39
samples/test1/test/notes/: 372C578D-B142-459C-8EE4-311E0ABC05CD
samples/test2/: index.events.pb  index.notes.pb
samples/test2/attachments/: 7819A512-2D5C-44CE-8D51-169C2C42F01E
samples/test2/notes/: 0580E88A-B67A-4DB9-8B93-6117B43CA9EC
samples/test3/: index.attachments.pb  index.events.pb
samples/test3/notes/: 0580E88A-B67A-4DB9-8B93-6117B43CA9EC
src/goodnotes2xournal/: __init__.py  applelz4.py  cli.py  goodnotes.py  protobuf.py  xournal.py
tests/: test_roundtrip.py
